Update aesthetics to Nothing style

--- a/dot_config/kitty/kitty.conf
+++ b/dot_config/kitty/kitty.conf
@@ -29,21 +29,56 @@ hide_window_decorations yes
 scrollback_lines 5000
 
 # -----------------------------------------------------------------------------
-# RENK TEMASI (Dracula / Cyberpunk benzeri)
+# RENK TEMASI (Nothing Aesthetics)
 # -----------------------------------------------------------------------------
-foreground            #f8f8f2
-background            #282a36
+# Nothing Grey Background
+background            #1B1B1D
+# White/Light Grey Text
+foreground            #EAEAEA
+
+# Nothing Red for Selection
 selection_foreground  #ffffff
-selection_background  #44475a
+selection_background  #D71921
 
-# Cursor (İmleç) rengi
-cursor                #f8f8f2
+# Cursor (İmleç) rengi - Nothing Red
+cursor                #D71921
 cursor_shape          beam 
-# 'beam' (çizgi), 'block' (kutu) veya 'underline' (alt çizgi) seçebilirsin.
 
-# Linklerin rengi (tıklanabilir URL'ler)
-url_color #8be9fd
+# Linklerin rengi - Nothing Yellow
+url_color #FFD606
 url_style curly
+
+# Black
+color0 #1B1B1D
+color8 #555555
+
+# Red (Nothing Red)
+color1 #D71921
+color9 #FF4D4D
+
+# Green (Nothing Yellowish/Green placeholder if needed, used for success)
+color2 #FFD606
+color10 #FFE033
+
+# Yellow (Nothing Yellow)
+color3 #FFD606
+color11 #FFE033
+
+# Blue (Muted Blue for readability)
+color4 #6688AA
+color12 #88AACC
+
+# Magenta
+color5 #AA6688
+color13 #CC88AA
+
+# Cyan
+color6 #66AAAA
+color14 #88CCCC
+
+# White
+color7 #EAEAEA
+color15 #FFFFFF
 
 # -----------------------------------------------------------------------------
 # KULLANIŞLI KISAYOLLAR & DAVRANIŞLAR
